--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             document.getElementById("fibonacci-result").innerHTML = fib;
         }
 
-        function fibonacci(a) {
-            return a < 2 ? a : fibonacci(a - 1) + fibonacci(a - 2);
+        function fibonacci(n) {
+            return n < 2 ? n : fibonacci(n - 1) + fibonacci(n - 2);
         }
 
         function benchmarkFibonacci(n) {
